# low-latency-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: mock_market_data.txt
docs/: concurrency.md
src/: benchmark.cpp  lock_free_queue.h  logger.h  main.cpp  market_data.cpp  market_data.h  memory_pool.h  thread_affinity.cpp  thread_affinity.h  types.h
